build/log/idf_py_stderr_output_2397
Command: make -j 10 flash
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:10:9: note: '#pragma message: oled128x64.c is compiling...'
   10 | #pragma message("oled128x64.c is compiling...")
      |         ^~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: In function 'oledShowRAMContent':
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:131:9: warning: unused variable 'ret' [-Wunused-variable]
  131 |     def ret;
      |         ^~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c: At top level:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:210:5: error: conflicting types for 'oledDrawEmptyRect'; have 'int(oled128x64Dev_t *, xy_t,  xy_t,  xy_t,  xy_t,  xy_t,  color_t)' {aka 'int(oled128x64Dev_t *, short int,  short int,  short int,  short int,  short int,  unsigned char)'}
  210 | int oledDrawEmptyRect(oled128x64Dev_t *oled,
      |     ^~~~~~~~~~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:7:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.h:79:6: note: previous declaration of 'oledDrawEmptyRect' with type 'def(oled128x64Dev_t *, xy_t,  xy_t,  xy_t,  xy_t,  xy_t,  color_t)' {aka 'long int(oled128x64Dev_t *, short int,  short int,  short int,  short int,  short int,  unsigned char)'}
   79 | def  oledDrawEmptyRect(oled128x64Dev_t *oled,
      |      ^~~~~~~~~~~~~~~~~
In file included from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64Definitions.h:4,
                 from /home/fus/Documents/DO-AN-02/comDriver/oled128x64/oled128x64.c:6:
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:28:23: warning: 'i2cHandleSDAIsr' defined but not used [-Wunused-function]
   28 | static void IRAM_ATTR i2cHandleSDAIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
/home/fus/Documents/DO-AN-02/comDriver/oled128x64/../i2c/i2c.h:22:23: warning: 'i2cHandleSCLIsr' defined but not used [-Wunused-function]
   22 | static void IRAM_ATTR i2cHandleSCLIsr(void* pvI2CDev){
      |                       ^~~~~~~~~~~~~~~
make[3]: *** [esp-idf/oled128x64/CMakeFiles/__idf_oled128x64.dir/build.make:79: esp-idf/oled128x64/CMakeFiles/__idf_oled128x64.dir/oled128x64.c.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:7497: esp-idf/oled128x64/CMakeFiles/__idf_oled128x64.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:3099: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:208: flash] Error 2
